fe29d74 Documentation and gh-pages in docs/ now.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Vislab | Home</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!--[if lt IE 9]>
@@ -36,7 +36,7 @@
 
 <h2 id="documentation">Documentation</h2>
 
-<p>The best place to get started is the <a href="/tutorial.html">tutorial</a>.</p>
+<p>The best place to get started is the <a href="tutorial.html">tutorial</a>.</p>
 
 <h2 id="acknowledgements">Acknowledgements</h2>
 
