--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <script type="text/javascript" src="//use.typekit.net/uzs7hgs.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
     
@@ -36,11 +39,15 @@
 
 <h2 id="documentation">Documentation</h2>
 
-<p>The best place to get started is the <a href="tutorial.html">tutorial</a>.</p>
+<ul>
+<li>Get started with the <a href="tutorial.html">tutorial</a>.</li>
+
+<li>Read about the provided <a href="datasets.html">datasets</a> and how to add your own.</li>
+</ul>
 
 <h2 id="acknowledgements">Acknowledgements</h2>
 
-<p>This code was written while I was an intern at Adobe Creative Technologies Lab, a Graduate Student Researcher at UC Berkeley, and on my own time.</p>
+<p>This code was written by Sergey Karayev while he was an intern at Adobe Creative Technologies Lab, a Graduate Student Researcher at UC Berkeley, and on his own time, and features contributions from others.</p>
     </section>
     <footer>
       <hr />
