992ff1f updated docs index

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <section>
       <h1 id="vislab">Vislab</h1>
 
-<h2 id="overview">Overview</h2>
-
-<p>Vislab is a set of modules for visual recognition:</p>
+<p>Vislab is a set of Python modules for visual recognition:</p>
 
 <ul>
-<li>Preparing a dataset.</li>
+<li>Dataset interfaces (ImageNet, PASCAL VOC, AVA, our Flickr style, Pinterest style, Wikipaintings datasets).</li>
 
-<li>Computing features on images.</li>
+<li>Distributed computation of image features.</li>
 
-<li>Splitting the dataset into train/val/test, and training/testing a predictor.</li>
+<li>Training and testing predictors for classification and regression tasks.</li>
 
-<li>Evaluating prediction results, outputting figures and tables.</li>
+<li>Evaluation of prediction results, with nice figures, confusion matrices, tables.</li>
 
-<li>Displaying dataset and prediction results in a web interface.</li>
+<li>Web UI for easy exploration of data and prediction results.</li>
 </ul>
 
 <p>It is released under the BSD 2-clause <a href="https://github.com/sergeyk/vislab/blob/master/LICENSE.txt">license</a>.</p>
+
+<p>The <a href="https://github.com/sergeyk/vislab">github repository</a> contains all source code and issue tracker.</p>
 
 <h2 id="documentation">Documentation</h2>
 
