a2d1249 adding CNAME for docs

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <p>The <a href="https://github.com/sergeyk/vislab">github repository</a> contains all source code and issue tracker.</p>
 
+<p>Check out an image style classification <a href="http://demo.vislab.berkeleyvision.org/">demo</a>!</p>
+
 <h2 id="documentation">Documentation</h2>
 
 <ul>
